<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.Material3.CardView.Elevated"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/header_monogram"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/avatar"
            app:shapeAppearanceOverlay="@style/CornerSize50Percent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

      <!--  <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="E"
            android:textColor="?colorOnPrimary"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="@+id/header_monogram"
            app:layout_constraintEnd_toEndOf="@+id/header_monogram"
            app:layout_constraintStart_toStartOf="@+id/header_monogram"
            app:layout_constraintTop_toTopOf="@+id/header_monogram" /> -->

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/header_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="Evolitist"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@+id/header_monogram"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="just do it"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/header_monogram"
            app:layout_constraintTop_toBottomOf="@+id/header_name" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/header_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/header_monogram" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.33" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.67" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/header_numberImages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="12"
            android:textSize="28sp"
            app:layout_constraintEnd_toStartOf="@+id/gl_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/header_divider" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/header_numberSubscribers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="5"
            android:textSize="28sp"
            app:layout_constraintEnd_toStartOf="@+id/gl_2"
            app:layout_constraintStart_toStartOf="@+id/gl_1"
            app:layout_constraintTop_toBottomOf="@+id/header_divider" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/header_numberPosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="16"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/gl_2"
            app:layout_constraintTop_toBottomOf="@+id/header_divider" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="images"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/gl_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_numberImages" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="subscribers"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/gl_2"
            app:layout_constraintStart_toStartOf="@+id/gl_1"
            app:layout_constraintTop_toBottomOf="@+id/header_numberSubscribers" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="posts"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/gl_2"
            app:layout_constraintTop_toBottomOf="@+id/header_numberPosts" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/header_divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/subscribe_button"
            style="@style/Widget.Material3.Button.CommonButtonFilled"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="16dp"
            android:text="@string/subscribe"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_divider2"
            tools:ignore="TouchTargetSizeCheck"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_button"
            style="@style/Widget.Material3.Button.CommonButtonTonal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="16dp"
            android:text="@string/edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_divider2"
            tools:ignore="TouchTargetSizeCheck"
            android:visibility="invisible"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/unsubscribe_button"
            style="@style/Widget.Material3.Button.CommonButtonOutlined"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="16dp"
            android:text="@string/unsubscribe"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_divider2"
            tools:ignore="TouchTargetSizeCheck"
            android:visibility="invisible"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>
